--- a/Prj12-Quotazioni/.project
+++ b/Prj12-Quotazioni/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Proj12-Quotazioni</name>
+	<name>Prj12-Quotazioni</name>
 	<comment></comment>
 	<projects>
 	</projects>
